more module-srv endpoints + using the name as the identifier